welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: reassignment to val
if (estSurMessage=true){
                 ^BDRBuggle:3: error: value update is not a member of String
		if (litMessage()='R'){
                    ^BDRBuggle:6: error: value update is not a member of String
		}else if (litMessage()='L'){
                          ^