welcome.lessons.welcome.bdr.BDR.scala.code
if (estSurMessage=true){
		if (litMessage()='R'){
			droite()
			avance()
		}else if (litMessage()='L'){
			gauche()
			avance()
		}
}


